Add test and any methods

--- a/Keeper.Api/appsettings.json
+++ b/Keeper.Api/appsettings.json
@@ -28,7 +28,7 @@
     "MessUrl": "http://10.10.80.230:81/api/Send/SendMessageTFMIS?phone",
 
     "DebugMode": true,
-    "DebugMode.Name": "Dfo SERVISE",
+    "DebugMode.Name": "Keeper SERVISE",
     "DebugMode.Version": "2023-12-15",
 
     "File.StoragePath": "C:\\home\\public",
