--- a/Keeper.Core/Keeper.Core.csproj
+++ b/Keeper.Core/Keeper.Core.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Bibliotekaen.Dto" Version="1.0.0" />
     <PackageReference Include="Bibliotekaen.Sql" Version="1.0.0" />
+    <PackageReference Include="EPPlus" Version="7.1.3" />
     <PackageReference Include="MailKit" Version="4.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
